# try_fastapi

./: README.md  poetry.toml  pyproject.toml
flashX/: main.py
